# huffman-cli

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
src/: main.cpp
src/coder/: decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp
src/coordinator/: compression_coordinator.cpp  compression_coordinator.hpp  decompression_coordinator.cpp  decompression_coordinator.hpp
src/huffman/: huffman.cpp  huffman.hpp
